codex-rs/tui-redesign/src/render/snapshots/codex_tui_redesign__render__tests__approval_120x32.snap
---
source: tui-redesign/src/render/tests.rs
assertion_line: 80
expression: "render_to_string(120, 32, &state).expect(\"render\")"
---
 CODEX_CLI v0.0.0 | NETWORK | MOD: gpt-5.4 xhigh | PERM: workspace-write | APPV: auto-review | CTX: 72% left            
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
CTX_MGR                │ DIR: /home/shaun/codes/codex | BRN: redesign-tui | CHG: 3 files | THR: Improve terminal UI     
PATH: ~/root/dev       │────────────────────────────────────────────────────────────────────────────────────────────────
                       │You ────                                                                                       │
  ◌ THREADS            │  │ Let's redesign the TUI to be more intuitive for CLI users.                                 │
  □ PROJECTS           │                                                                                               │
  ◇ MODELS             │Codex ────                                                                                     │
▌ ◷ HISTORY            │  │ Agreed. I'll focus on information density and clear keyboard shortcuts.                    │
                       │                                                                                               │
                       │┌─[ APVL_REQ ]───────────────────────────────────────────────────────────────┐                 │
                       ││ CMD: git commit -m "Update TUI layout"                                     │                 │
                       ││ RSN: Commit requested by user                                              │                 │
                       ││ [ APPROVE ]  [ APV_SESS ]  [ DENY ]                                        │                 │
                       │└────────────────────────────────────────────────────────────────────────────┘                 │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │                                                                                               │
                       │────────────────────────────────────────────────────────────────────────────────────────────────
                       │ ▶ Running: linting project... | ELAPSED: 00:14 | Esc INT  Tab QUE                              
                       │────────────────────────────────────────────────────────────────────────────────────────────────
                       │ MSG> Describe the next change...                                                               
                       │────────────────────────────────────────────────────────────────────────────────────────────────
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 (C) OPENAI_CODEX  F1 HELP  F2 CMD  F3 CLR  ESC EXIT  ? shortcuts  C-R history  C-T transcript  S-Tab mode
