codex-rs/tui-redesign/src/render/snapshots/codex_tui_redesign__render__tests__approval_72x24.snap
---
source: tui-redesign/src/render/tests.rs
assertion_line: 107
expression: "render_to_string(72, 24, &state).expect(\"render\")"
---
CODEX_CLI v0.0.0 | NETWORK | MOD: gpt-5.4 xhigh | CTX: 72% left         
 DIR: .../codex | BRN: redesign-tui | CHG: 3 files                      
────────────────────────────────────────────────────────────────────────
You ────                                                               │
  │ Let's redesign the TUI to be more intuitive for CLI users.         │
                                                                       │
Codex ────                                                             │
  │ Agreed. I'll focus on information density and clear keyboard       │
  │ shortcuts.                                                         │
                                                                       │
┌─[ APVL_REQ ]──────────────────────────────────────────────────────┐  │
│ CMD: git commit -m "Update TUI layout"                            │  │
│ RSN: Commit requested by user                                     │  │
│ [ APPROVE ]  [ APPROVE SESSION ]  [ DENY ]                        │  │
└───────────────────────────────────────────────────────────────────┘  │
                                                                       │
                                                                       │
                                                                       │
                                                                       │
                                                                       │
▶ Running: linting project | Esc INT  Tab QUE                           
 MSG> Describe the next change...                                       
────────────────────────────────────────────────────────────────────────
(C) OPENAI_CODEX  Alt-H HELP  Alt-/ CMD  ESC EXIT  ? shortcuts  C-R hist
