codex-rs/tui-redesign/src/render/snapshots/codex_tui_redesign__render__tests__commands_overlay_100x28.snap
---
source: tui-redesign/src/render/tests.rs
assertion_line: 109
expression: "render_to_string(100, 28, &state).expect(\"render\")"
---
CODEX_CLI v0.0.0 | NETWORK | MOD: gpt-5.4 xhigh | PERM: workspace-write | CTX: 72% left             
CTX_MGR                │ DIR: .../codex | BRN: redesign-tui | CHG: 3 files                          
PATH: ~/root/dev       │────────────────────────────────────────────────────────────────────────────
                       │You ────                                                                   │
  ◌ THREADS            │  │ Let's redesign the TUI to be more intuitive for CLI users.             │
  □ PROJECTS           │                                                                           │
  ◇ MODELS             │Codex ────                                                                 │
▌ ◷ HISTORY            │  │ Agreed. I'll focus on information density and clear keyboard shortcuts.│
           ┌ COMMANDS ──────────────────────────────────────────────────────────────────┐          │
           │CMD> type to filter                                                         │───────┐  │
           │                                                                            │       │  │
           │> new-thread  Reset local transcript                                        │       │  │
           │  simulate-run  Show running status                                         │       │  │
           │  simulate-approval  Create approval request                                │───────┘  │
           │  clear-draft  Clear composer text                                          │          │
           │  clear-transcript  Clear visible transcript                                │          │
           │  help  Open shortcuts                                                      │          │
           │                                                                            │          │
           │Type filter  Up/Down choose  Enter run  Esc close                           │          │
           └────────────────────────────────────────────────────────────────────────────┘          │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │▶ Running: linting project | Esc INT  Tab QUE                               
                       │ MSG> Describe the next change...                                           
                       │────────────────────────────────────────────────────────────────────────────
(C) OPENAI_CODEX  F1 HELP  F2 CMD  F3 CLR  ESC EXIT  ? shortcuts  C-R history  C-T transcript  S-Tab
