codex-rs/tui-redesign/src/render/snapshots/codex_tui_redesign__render__tests__help_overlay_100x28.snap
---
source: tui-redesign/src/render/tests.rs
assertion_line: 117
expression: "render_to_string(100, 28, &state).expect(\"render\")"
---
CODEX_CLI v0.0.0 | NETWORK | MOD: gpt-5.4 xhigh | PERM: workspace-write | CTX: 72% left             
CTX_MGR                │ DIR: .../codex | BRN: redesign-tui | CHG: 3 files                          
PATH: ~/root/dev       │────────────────────────────────────────────────────────────────────────────
                       │You ────                                                                   │
  ◌ THREADS            │  │ Let's redesign the TUI to be more intuitive for CLI users.             │
  □ PROJECTS           │                                                                           │
  ◇ MODELS             │Codex ────                                                                 │
▌ ◷ HISTORY            │  │ Agreed. I'll focus on information density and clear keyboard shortcuts.│
           ┌ SHORTCUTS ─────────────────────────────────────────────────────────────────┐          │
           │Tab / Shift+Tab  move focus                                                 │───────┐  │
           │Enter  submit composer or select approval action                            │       │  │
           │Left / Right  choose approval action                                        │       │  │
           │Ctrl+R  history overlay                                                     │       │  │
           │Ctrl+T  transcript overlay                                                  │───────┘  │
           │1 / 2 / 3  idle / running / approval demo                                   │          │
           │Alt-/ / Ctrl+P  command palette                                             │          │
           │Esc / q  close overlay or exit                                              │          │
           │                                                                            │          │
           │                                                                            │          │
           └────────────────────────────────────────────────────────────────────────────┘          │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │▶ Running: linting project | Esc INT  Tab QUE                               
                       │ MSG> Describe the next change...                                           
                       │────────────────────────────────────────────────────────────────────────────
(C) OPENAI_CODEX  Alt-H HELP  Alt-/ CMD  ESC EXIT  ? shortcuts  C-R history  C-T transcript  S-Tab m
