codex-rs/tui-redesign/src/render/snapshots/codex_tui_redesign__render__tests__running_100x24.snap
---
source: tui-redesign/src/render/tests.rs
assertion_line: 89
expression: "render_to_string(100, 24, &state).expect(\"render\")"
---
CODEX_CLI v0.0.0 | NETWORK | MOD: gpt-5.4 xhigh | PERM: workspace-write | CTX: 72% left             
CTX_MGR                │ DIR: .../codex | BRN: redesign-tui | CHG: 3 files                          
PATH: ~/root/dev       │────────────────────────────────────────────────────────────────────────────
                       │You ────                                                                   │
  ◌ THREADS            │  │ Let's redesign the TUI to be more intuitive for CLI users.             │
  □ PROJECTS           │                                                                           │
  ◇ MODELS             │Codex ────                                                                 │
▌ ◷ HISTORY            │  │ Agreed. I'll focus on information density and clear keyboard shortcuts.│
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │                                                                           │
                       │▶ Running: linting project | Esc INT  Tab QUE                               
                       │ MSG> Describe the next change...                                           
                       │────────────────────────────────────────────────────────────────────────────
(C) OPENAI_CODEX  Alt-H HELP  Alt-/ CMD  ESC EXIT  ? shortcuts  C-R history  C-T transcript  S-Tab m
